name:               wai-middleware-delegate

version:            0.1.1.0
synopsis:           WAI middleware that delegates handling of requests.
description:        WAI middleware to intercept requests that match a predicate and
                    respond to them using other WAI Applications or proxied hosts. [WAI]
                    <http://hackage.haskell.org/package/wai>
license:            BSD3
license-file:       LICENSE
extra-source-files: README.md
author:             Tim Emiola
maintainer:         tim.emiola@gmail.com
category:           Web
homepage:           https://github.com/adetokunbo/wai-middleware-delegate
bug-reports:        https://github.com/adetokunbo/wai-middleware-delegate/issues
build-type:         Simple
extra-source-files: ChangeLog.md


source-repository head
  type:     git
  location: git@github.com:phlummox/wai-middleware-delegate.git

library
  exposed-modules:  Network.Wai.Middleware.Delegate
  hs-source-dirs:   src
  build-depends:
      base
    , async
    , blaze-builder
    , bytestring
    , case-insensitive
    , conduit
    , conduit-extra
    , data-default
    , http-client
    , http-conduit
    , http-types
    , streaming-commons
    , text
    , wai
    , wai-conduit
  default-language: Haskell2010

test-suite integration-test
  type:             exitcode-stdio-1.0
  main-is:          IntegrationTest.hs
  other-modules:    Test.Fetch
                    Test.HttpReply
                    Test.TestRequests
                    Test.WithExtras
  hs-source-dirs:   test
  build-depends:    base
                  , async
                  , blaze-builder
                  , bytestring
                  , bytestring-lexing
                  , case-insensitive
                  , conduit
                  , conduit-extra
                  , connection              >= 0.2
                  , data-default
                  , hspec                   >= 2.1
                  , http-client
                  , http-client-tls
                  , http-conduit
                  , http-types
                  , network
                  , random                  >= 1.1
                  , resourcet
                  , text
                  , vault
                  , wai
                  , wai-conduit
                  , wai-middleware-delegate
                  , warp
                  , warp-tls
  default-language: Haskell2010
  ghc-options:      -Wall -fwarn-tabs -threaded
